--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;1,100;1,200;1,300;1,400;1,500;1,700&display=swap');
+
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App,
+html,
+#root,
+body {
+  /* background-color: black; */
+  box-sizing: border-box;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+:root {
+  --main-bg-color: #D3E0ED;
+  --alt-bg-color: #ffffff;
+  --main-font: 'Roboto', sans-serif;
+  --main-color: #0571cb;
+  --main-nav-color: #7E5BFF;
+  --main-border-color: #e0e0e0;
+
+  --confirm-bg-color: #06cb05;
+
+  --secondary-font: 'Montserrat', sans-serif;
+
+  --main-text-color: #6b6b6b;
+  --alt-text-color: #cacaca;
+
+  --card-surface: #ffffff;
+  --box-shadow: 0 0px 15px 0 rgb(0 0 0 / 20%);
+  --error-color: #e70000;
+
+  --main-border: 1px solid var(--main-border-color);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.App {
+  background-color: var(--main-bg-color);
+}
+
+.hidden {
+  display: none !important;
 }
